[metadata]
name = leptons
version = 0.0.1
author = timeplus
author_email = eng@timeplus.io
description =Timeplus OpenAI API monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timeplus-io/leptons
project_urls =
    Bug Tracker = https://github.com/timeplus-io/leptons/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3

[options.packages.find]
where = .